# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config_parser.py  constants.py  custom_pattern_font.py  grid.py  maze_generator.py  menu.py  pattern_font.py  pyproject.toml  renderer.py
mazegen/: hollow_cells.py  maze_generator.py
