[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"   

[project]
name = "mazegen"
version = "1.0.0"
description = "Terminal maze generator with DFS and Prim algorithms"
authors = [
  {name = "Hamid", email = "hamid@example.com"},
  {name = "Abdessamad", email = "abdessamadoukaamouch@example.com"}
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]